[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["2005869 <2005869@aluno.univesp.br>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
